--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.4
 click==8.1.8
 contourpy==1.3.0
 cycler==0.12.1
+et_xmlfile==2.0.0
 fonttools==4.60.1
 gitdb==4.0.12
 GitPython==3.1.45
@@ -20,8 +21,10 @@ MarkupSafe==3.0.3
 matplotlib==3.9.4
 narwhals==2.8.0
 numpy==2.0.2
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
+patsy==1.0.2
 pillow==11.3.0
 plotly==6.3.1
 protobuf==6.32.1
@@ -33,9 +36,11 @@ pytz==2025.2
 referencing==0.36.2
 requests==2.32.5
 rpds-py==0.27.1
+scipy==1.17.0
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
+statsmodels==0.14.6
 streamlit==1.50.0
 tenacity==9.1.2
 toml==0.10.2
